kubernetes/subjects-database.yml
apiVersion: v1
kind: Pod
metadata:
  name: subjects-db
  labels:
    app: subjects
    tier: api-storage
spec:
  volumes:
    - name: persistent-volume-storage
      persistentVolumeClaim:
        claimName: persistence-volume-claim
  containers:
    - name: subjects-db-container
      image: postgres:latest
      ports:
        - containerPort: 5432
          name: "subjects-db"
      volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: persistent-volume-storage
