kubernetes/subjects-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: subjects
    tier: api
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: subjects
