kubernetes/subjects-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: subjects-db
  labels:
    app: subjects
    tier: api-storage
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: subjects
