kubernetes/subjects-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subjects-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.descobar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 9000
